--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ targetCompatibility = 1.8
 
 dependencies {
     compile "com.googlecode.lanterna:lanterna:3.0.0-beta2"
-    compile "org.slf4j:slf4j-log4j12:1.6.1"
+    compile "ch.qos.logback:logback-classic:1.0.13"
     runtime "com.googlecode.lanterna:lanterna:3.0.0-beta2"
-    runtime "org.slf4j:slf4j-log4j12:1.6.1"
+    runtime "ch.qos.logback:logback-classic:1.0.13"
 }
