--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ targetCompatibility = 1.8
 dependencies {
     implementation "com.googlecode.lanterna:lanterna:3.1.1"
     implementation "ch.qos.logback:logback-classic:1.2.10"
+    implementation "commons-cli:commons-cli:1.3.1"
 }
